[gd_scene load_steps=6 format=3 uid="uid://2yvq6yiiep7y"]

[ext_resource type="Script" uid="uid://03jbkpkjqktm" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://c0kvv7r267ubi" path="res://scripts/play_button.gd" id="2_bqqt6"]
[ext_resource type="Script" uid="uid://cpd4dpoo5q4kv" path="res://scripts/ButtonSFX.gd" id="2_ekxnf"]

[sub_resource type="LabelSettings" id="LabelSettings_vue75"]
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_ekxnf"]
font_size = 24

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25545633, 0.3437047, 0.3218117, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.20700002
anchor_top = 0.23500001
anchor_right = 0.79
anchor_bottom = 0.39000002
offset_left = -0.46401978
offset_top = -0.28001404
offset_right = -0.08001709
offset_bottom = -1.7200165
text = "Locked and Loaded"
label_settings = SubResource("LabelSettings_vue75")

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.365
anchor_top = 0.42700002
anchor_right = 0.629
anchor_bottom = 0.514
offset_left = 0.519989
offset_top = 0.3039856
offset_right = 0.39196777
offset_bottom = -0.07199097
text = "Play"
script = ExtResource("2_bqqt6")

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.365
anchor_top = 0.545
anchor_right = 0.629
anchor_bottom = 0.63100004
offset_left = 0.519989
offset_top = -0.16000366
offset_right = 0.39196777
offset_bottom = 0.111968994
text = "Settings"
script = ExtResource("2_ekxnf")

[node name="ExitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.365
anchor_top = 0.66200006
anchor_right = 0.629
anchor_bottom = 0.748
offset_left = 0.519989
offset_top = 0.023956299
offset_right = 0.39196777
offset_bottom = 0.29599
text = "Exit"
script = ExtResource("2_ekxnf")

[node name="Controls" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.016
anchor_top = 0.688
anchor_right = 0.36200002
anchor_bottom = 0.96500003
offset_left = 0.5679989
offset_top = 0.17599487
offset_right = -0.024017334
offset_bottom = 0.17999268
text = "Controls: 
Press Spacebar to change rotation
Hold Spacebar to hold rotation
Double tap Spacebar for a shield 
that can knock enemies back"
label_settings = SubResource("LabelSettings_ekxnf")

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PlayButton" to="PlayButton" method="_on_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
